Basic frontend complete

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XYZ Corp Bug Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -21,268 +22,9 @@
             }
         }
     </script>
-    <style>
-        .fade-in {
-            opacity: 0;
-            transform: translateY(20px);
-            transition: all 0.6s ease-out;
-        }
-        .fade-in.visible {
-            opacity: 1;
-            transform: translateY(0);
-        }
-        .navbar-blur {
-            backdrop-filter: blur(10px);
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-    </style>
-</head>
-<body class="bg-dark-bg text-text-primary">
-    <!-- Navigation -->
-    <nav id="navbar" class="fixed top-0 w-full z-50 transition-all duration-300 py-4">
-        <div class="max-w-7xl mx-auto px-6 flex justify-between items-center">
-            <div class="text-xl font-bold text-text-primary">XYZ</div>
-            <div class="hidden md:flex space-x-8">
-                <a href="#" class="text-text-primary hover:text-accent-coral transition-colors">Home</a>
-                <a href="#" class="text-text-primary hover:text-accent-coral transition-colors">Features</a>
-                <a href="#" class="text-text-primary hover:text-accent-coral transition-colors">About</a>
-                <a href="#" class="text-text-primary hover:text-accent-coral transition-colors">Contact</a>
-            </div>
-            <button class="bg-accent-red hover:bg-accent-coral px-4 py-2 rounded-lg transition-all duration-300 hover:scale-105">
-                Get Started
-            </button>
-        </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section class="pt-24 pb-16 px-6">
-        <div class="max-w-7xl mx-auto">
-            <div class="grid lg:grid-cols-2 gap-12 items-center">
-                <div class="fade-in">
-                    <h1 class="text-5xl lg:text-6xl font-bold mb-6 leading-tight">
-                        Welcome to XYZ<br>
-                        <span class="text-accent-red">Corp Bug Tracker!</span>
-                    </h1>
-                    <p class="text-xl text-text-muted mb-8 leading-relaxed">
-                        Track, manage, and resolve bugs efficiently with our powerful platform designed for modern development teams.
-                    </p>
-                    <div class="flex flex-col sm:flex-row gap-4">
-                        <button class="bg-accent-red hover:bg-accent-coral px-8 py-4 rounded-lg font-semibold transition-all duration-300 hover:scale-105">
-                            Start Tracking
-                        </button>
-                        <button class="border border-text-muted hover:border-accent-coral px-8 py-4 rounded-lg font-semibold transition-all duration-300 hover:scale-105">
-                            Learn More
-                        </button>
-                    </div>
-                </div>
-                <div class="fade-in grid grid-cols-2 gap-4">
-                    <div class="bg-card-bg h-32 rounded-lg"></div>
-                    <div class="bg-card-bg h-24 rounded-lg mt-8"></div>
-                    <div class="bg-card-bg h-28 rounded-lg"></div>
-                    <div class="bg-card-bg h-36 rounded-lg"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Features Grid -->
-    <section class="py-16 px-6">
-        <div class="max-w-7xl mx-auto">
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div class="fade-in bg-card-bg p-8 rounded-xl hover:scale-105 transition-all duration-300 hover:shadow-2xl">
-                    <h3 class="text-2xl font-bold mb-4">Powerful Bug Tracking Made Simple and Efficient</h3>
-                    <p class="text-text-muted mb-6">Streamline your development workflow with intuitive bug tracking tools.</p>
-                    <button class="bg-accent-red hover:bg-accent-coral px-6 py-2 rounded-lg transition-all duration-300">
-                        Learn More
-                    </button>
-                </div>
-                
-                <div class="fade-in bg-card-bg p-8 rounded-xl hover:scale-105 transition-all duration-300 hover:shadow-2xl">
-                    <h3 class="text-2xl font-bold mb-4">Real-time Bug Reporting and Team Collaboration</h3>
-                    <p class="text-text-muted mb-6">Collaborate seamlessly with your team and get instant notifications.</p>
-                    <div class="flex items-center space-x-4">
-                        <div class="w-8 h-8 bg-accent-red rounded"></div>
-                        <div class="w-8 h-8 bg-accent-coral rounded"></div>
-                    </div>
-                </div>
-
-                <div class="fade-in bg-card-bg p-8 rounded-xl hover:scale-105 transition-all duration-300 hover:shadow-2xl">
-                    <h3 class="text-2xl font-bold mb-4">Bug Priority Classification and Status Management</h3>
-                    <p class="text-text-muted mb-6">Prioritize and manage bug status with advanced classification systems.</p>
-                    <div class="space-y-2">
-                        <div class="flex justify-between">
-                            <span>High Priority</span>
-                            <div class="w-8 h-8 bg-accent-red rounded"></div>
-                        </div>
-                        <div class="flex justify-between">
-                            <span>Medium Priority</span>
-                            <div class="w-8 h-8 bg-accent-coral rounded"></div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="fade-in bg-card-bg p-8 rounded-xl hover:scale-105 transition-all duration-300 hover:shadow-2xl">
-                    <h3 class="text-2xl font-bold mb-4">Comprehensive Analytics and Bug Insights</h3>
-                    <p class="text-text-muted">Get detailed insights into your bug patterns and team performance.</p>
-                </div>
-
-                <div class="fade-in bg-card-bg p-8 rounded-xl hover:scale-105 transition-all duration-300 hover:shadow-2xl">
-                    <h3 class="text-2xl font-bold mb-4">User-friendly Dashboard for Bug Management</h3>
-                    <p class="text-text-muted">Manage all your bugs from one centralized, intuitive dashboard.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- CTA Section -->
-    <section class="py-16 px-6">
-        <div class="max-w-4xl mx-auto text-center fade-in">
-            <h2 class="text-4xl font-bold mb-6">Take Control of Your Bugs</h2>
-            <p class="text-xl text-text-muted mb-8">Join thousands of developers who trust our platform for efficient bug management.</p>
-            <button class="bg-accent-red hover:bg-accent-coral px-12 py-4 rounded-lg font-semibold text-lg transition-all duration-300 hover:scale-105">
-                Get Started Now
-            </button>
-        </div>
-    </section>
-
-    <!-- Testimonials -->
-    <section class="py-16 px-6">
-        <div class="max-w-4xl mx-auto text-center fade-in">
-            <div class="flex justify-center mb-6">
-                <div class="flex space-x-1">
-                    <span class="text-2xl text-accent-red">★</span>
-                    <span class="text-2xl text-accent-red">★</span>
-                    <span class="text-2xl text-accent-red">★</span>
-                    <span class="text-2xl text-accent-red">★</span>
-                    <span class="text-2xl text-accent-red">★</span>
-                </div>
-            </div>
-            <blockquote class="text-xl italic text-text-muted mb-8">
-                "XYZ Corp Bug Tracker has revolutionized how we handle bugs. The intuitive interface and powerful features have increased our team's productivity by 40%."
-            </blockquote>
-            <div class="flex justify-center items-center space-x-8">
-                <div class="w-12 h-12 bg-card-bg rounded-full"></div>
-                <div class="w-12 h-12 bg-card-bg rounded-full"></div>
-                <div class="w-12 h-12 bg-card-bg rounded-full"></div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Video/Demo Section -->
-    <section class="py-16 px-6">
-        <div class="max-w-6xl mx-auto">
-            <div class="grid lg:grid-cols-2 gap-12 items-center">
-                <div class="fade-in">
-                    <h2 class="text-4xl font-bold mb-6">Track Bugs, Enhance Performance, Boost Productivity</h2>
-                    <p class="text-xl text-text-muted mb-8">
-                        See how our platform transforms bug tracking from a chore into a streamlined process that enhances your entire development workflow.
-                    </p>
-                    <div class="grid grid-cols-2 gap-8">
-                        <div class="text-center">
-                            <div class="text-3xl font-bold text-accent-red mb-2">75%</div>
-                            <div class="text-text-muted">Faster Resolution</div>
-                        </div>
-                        <div class="text-center">
-                            <div class="text-3xl font-bold text-accent-red mb-2">90%</div>
-                            <div class="text-text-muted">Team Satisfaction</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="fade-in bg-card-bg rounded-xl p-8 relative">
-                    <div class="aspect-video bg-gray-700 rounded-lg flex items-center justify-center">
-                        <div class="w-16 h-16 bg-accent-red rounded-full flex items-center justify-center">
-                            <div class="w-0 h-0 border-l-8 border-l-white border-t-4 border-t-transparent border-b-4 border-b-transparent ml-1"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Final CTA -->
-    <section class="py-16 px-6">
-        <div class="max-w-4xl mx-auto text-center fade-in">
-            <h2 class="text-4xl font-bold mb-6">Empowering developers with seamless bug tracking for enhanced productivity</h2>
-            <p class="text-xl text-text-muted mb-8">
-                Join the revolution in bug management. Start tracking smarter, not harder.
-            </p>
-            <div class="bg-card-bg p-8 rounded-xl">
-                <div class="w-16 h-16 bg-accent-red rounded-lg mx-auto mb-4"></div>
-                <p class="text-text-muted">Ready to transform your development process?</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="py-12 px-6 border-t border-card-bg">
-        <div class="max-w-7xl mx-auto">
-            <div class="grid md:grid-cols-4 gap-8">
-                <div>
-                    <div class="text-xl font-bold mb-4">XYZ</div>
-                    <p class="text-text-muted">Revolutionizing bug tracking for modern development teams.</p>
-                </div>
-                <div>
-                    <h4 class="font-semibold mb-4">Product</h4>
-                    <div class="space-y-2 text-text-muted">
-                        <div>Features</div>
-                        <div>Pricing</div>
-                        <div>Documentation</div>
-                    </div>
-                </div>
-                <div>
-                    <h4 class="font-semibold mb-4">Company</h4>
-                    <div class="space-y-2 text-text-muted">
-                        <div>About</div>
-                        <div>Careers</div>
-                        <div>Contact</div>
-                    </div>
-                </div>
-                <div>
-                    <h4 class="font-semibold mb-4">Connect</h4>
-                    <div class="flex space-x-4">
-                        <div class="w-8 h-8 bg-card-bg rounded"></div>
-                        <div class="w-8 h-8 bg-card-bg rounded"></div>
-                        <div class="w-8 h-8 bg-card-bg rounded"></div>
-                        <div class="w-8 h-8 bg-card-bg rounded"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        // Sticky navbar with blur effect
-        window.addEventListener('scroll', () => {
-            const navbar = document.getElementById('navbar');
-            if (window.scrollY > 50) {
-                navbar.classList.add('navbar-blur');
-            } else {
-                navbar.classList.remove('navbar-blur');
-            }
-        });
-
-        // Fade in animation on scroll
-        const observerOptions = {
-            threshold: 0.1,
-            rootMargin: '0px 0px -50px 0px'
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('visible');
-                }
-            });
-        }, observerOptions);
-
-        document.querySelectorAll('.fade-in').forEach(el => {
-            observer.observe(el);
-        });
-
-        // Initial fade-in for hero section
-        setTimeout(() => {
-            document.querySelector('.fade-in').classList.add('visible');
-        }, 100);
-    </script>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
